# FinCore-Streaming-System

./: CMakeLists.txt  Documents  README.md  main  market_pipeline  tags
data/: sample_data.csv
docker/: Dockerfile  docker-compose.yml
docs/: psql_architecture.md
docs/diagrams/: PSQL_achitecture_class-diagram.vpp
docs/diagrams/redis.vpp/: redis_architecture_fincore.vpp
include/: config.h  order_book.hpp  redis_client.hpp  tick.hpp
include/api/: alpha_vantage_client.hpp
include/app/: MarketDataService.hpp
include/cli/: cpp  fincore_cli.hpp  process_metrics.hpp
include/core/: order_book.hpp  types.hpp
include/domain/: Quote.hpp
include/ports/: IMarketDataSource.hpp  IQuoteCache.hpp
include/storage/: cpp  postgres_client.hpp  redis_client.hpp  redis_stream.hpp  tags  tick.hpp
scripts/: build.sh  build_and_run.sh  clean.sh  install_deps.sh  run_docker.sh
scripts/migrations/: init_db.sql
src/: main  main.cpp  order_book.cpp  redis_client.cpp  tags  tick.hpp
src/api/: alpha_vantage_client.cpp  alpha_vantage_client.cpp.bak  alpha_vantage_client.hpp
src/app/: MarketDataService.cpp
src/cli/: fincore_cli.cpp  process_metrics.cpp
src/core/: main.cpp  order_book.cpp
src/storage/: postgres_client.cpp  redis_client.cpp
tests/unit/: alpha_vantage_client_test.cpp  fincore_cli_test.cpp  order_book_test.cpp  process_metrics_test.cpp  test_quote_repo.cpp  test_redis_client.cpp
